Add geocoding search API to backend weather service
Co-authored-by: markp07 <151572852+markp07@users.noreply.github.com>